--- a/Project.toml
+++ b/Project.toml
@@ -13,4 +13,5 @@ LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 beforerr = "49aed396-608e-4c3f-b6d6-a749216c9ea7"
 
 [compat]
+DataFrames = "1"
 julia = "1.10"
