--- a/Project.toml
+++ b/Project.toml
@@ -15,7 +15,8 @@ Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 [compat]
 AlgebraOfGraphics = "0.6"
 Arrow = "2"
-LaTeXStrings = "1"
 DataFrames = "1"
 DataFramesMeta = "0.15"
+LaTeXStrings = "1"
+Makie = "0.21"
 julia = "1.10"
