--- a/Project.toml
+++ b/Project.toml
@@ -13,7 +13,7 @@ LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 
 [compat]
-AlgebraOfGraphics = "0.6"
+AlgebraOfGraphics = "0.6, 0.8"
 Arrow = "2"
 DataFrames = "1"
 DataFramesMeta = "0.15"
