--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,8 @@ DataFramesMeta = "1313f7d8-7da2-5740-9ea0-a2ca25f37964"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
+PlasmaFormulary = "d26ff896-aba2-4e70-a0a6-448627456efe"
+Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [compat]
 AlgebraOfGraphics = "0.6"
