--- a/Project.toml
+++ b/Project.toml
@@ -23,6 +23,7 @@ AlgebraOfGraphics = "0.6"
 Arrow = "2"
 DataFrames = "1"
 DataFramesMeta = "0.15"
+FHist = "0.11"
 FileIO = "1"
 LaTeXStrings = "1"
 Unitful = "1"
