--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,3 +1,5 @@
 [deps]
+Beforerr = "49aed396-608e-4c3f-b6d6-a749216c9ea7"
 Discontinuity = "b54b658d-ecbf-47cc-8c7f-673f5d2a4b30"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+PlasmaFormulary = "d26ff896-aba2-4e70-a0a6-448627456efe"
