--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -16,8 +16,10 @@ jobs:
       - uses: actions/checkout@v4
       - uses: julia-actions/setup-julia@v2
       - uses: julia-actions/cache@v2
+      - name: Install dev dependencies
+        run: julia --project -e 'using Pkg; Beforerr = PackageSpec(url="https://github.com/Beforerr/beforerr.jl"); PlasmaFormulary = PackageSpec(url="https://github.com/Beforerr/PlasmaFormulary.jl")'
       - name: Install dependencies
-        run: julia --project=docs/ -e 'using Pkg; Pkg.develop(url="https://github.com/Beforerr/beforerr.jl"); Pkg.develop(url="https://github.com/Beforerr/PlasmaFormulary.jl"); Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
+        run: julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
       - name: Build and deploy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # If authenticating with GitHub Actions token
