--- a/Project.toml
+++ b/Project.toml
@@ -20,6 +20,7 @@ PlasmaFormulary = "d26ff896-aba2-4e70-a0a6-448627456efe"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [compat]
+AlgebraOfGraphics = "0.8"
 Arrow = "2"
 DataFrames = "1"
 FileIO = "1"
