--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Discontinuity"
 uuid = "b54b658d-ecbf-47cc-8c7f-673f5d2a4b30"
 authors = ["Beforerr <zzj956959688@gmail.com> and contributors"]
-version = "1.0.0-DEV"
+version = "0.1.0"
 
 [deps]
 AlgebraOfGraphics = "cbdf2221-f076-402e-a563-3d30da359d67"
