--- a/Project.toml
+++ b/Project.toml
@@ -17,11 +17,12 @@ LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 PlasmaFormulary = "d26ff896-aba2-4e70-a0a6-448627456efe"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [sources]
-Beforerr = {url = "https://github.com/Beforerr/beforerr.jl"}
-PlasmaFormulary = {url = "https://github.com/Beforerr/PlasmaFormulary.jl"}
+Beforerr = { url = "https://github.com/Beforerr/beforerr.jl" }
+PlasmaFormulary = { url = "https://github.com/Beforerr/PlasmaFormulary.jl" }
 
 [compat]
 Arrow = "2"
