--- a/Project.toml
+++ b/Project.toml
@@ -20,14 +20,17 @@ PlasmaFormulary = "d26ff896-aba2-4e70-a0a6-448627456efe"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
-[sources]
-Beforerr = { url = "https://github.com/Beforerr/beforerr.jl" }
-PlasmaFormulary = { url = "https://github.com/Beforerr/PlasmaFormulary.jl" }
+[sources.Beforerr]
+url = "https://github.com/Beforerr/beforerr.jl"
+
+[sources.PlasmaFormulary]
+url = "https://github.com/Beforerr/PlasmaFormulary.jl"
 
 [compat]
 Arrow = "2"
 DataFrames = "1"
 FileIO = "1"
 LaTeXStrings = "1"
+StaticArrays = "1"
 Unitful = "1"
 julia = "1.10"
