--- a/Project.toml
+++ b/Project.toml
@@ -21,7 +21,7 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [sources]
-Beforerr = { url = "https://github.com/Beforerr/beforerr.jl" }
+Beforerr = { url = "https://github.com/Beforerr/Beforerr.jl" }
 PlasmaFormulary = { url = "https://github.com/Beforerr/PlasmaFormulary.jl" }
 
 [compat]
