--- a/Project.toml
+++ b/Project.toml
@@ -19,14 +19,17 @@ Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 PlasmaFormulary = "d26ff896-aba2-4e70-a0a6-448627456efe"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
-[sources]
-Beforerr = { url = "https://github.com/Beforerr/Beforerr.jl" }
-PlasmaFormulary = { url = "https://github.com/Beforerr/PlasmaFormulary.jl" }
+[sources.Beforerr]
+url = "https://github.com/Beforerr/Beforerr.jl"
+
+[sources.PlasmaFormulary]
+url = "https://github.com/Beforerr/PlasmaFormulary.jl"
 
 [compat]
 Arrow = "2"
 DataFrames = "1"
 FileIO = "1"
 LaTeXStrings = "1"
+Makie = "0.22"
 Unitful = "1"
 julia = "1.10"
