CompatHelper: add new compat entry for AlgebraOfGraphics at version 0.9, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -26,6 +26,7 @@ url = "https://github.com/Beforerr/Beforerr.jl"
 url = "https://github.com/Beforerr/PlasmaFormulary.jl"
 
 [compat]
+AlgebraOfGraphics = "0.9"
 Arrow = "2"
 DataFrames = "1"
 FileIO = "1"
