--- a/Project.toml
+++ b/Project.toml
@@ -26,7 +26,7 @@ url = "https://github.com/Beforerr/Beforerr.jl"
 url = "https://github.com/Beforerr/PlasmaFormulary.jl"
 
 [compat]
-AlgebraOfGraphics = "0.9"
+AlgebraOfGraphics = "0.9, 0.10"
 Arrow = "2"
 DataFrames = "1"
 FileIO = "1"
