--- a/Project.toml
+++ b/Project.toml
@@ -10,27 +10,37 @@ Beforerr = "49aed396-608e-4c3f-b6d6-a749216c9ea7"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataFramesMeta = "1313f7d8-7da2-5740-9ea0-a2ca25f37964"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+DimensionalData = "0703355e-b756-11e9-17c0-8b28908087d0"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 FHist = "68837c9b-b678-4cd5-9925-8a54edc8f695"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
+LazyArrays = "5078a376-72f3-5289-bfd5-ec5146d43c02"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
+NaNStatistics = "b946abbf-3ea7-4610-9019-9858bfdeaf2d"
+OhMyThreads = "67456a42-1dca-4109-a031-0a68de7e3ad5"
 PlasmaFormulary = "d26ff896-aba2-4e70-a0a6-448627456efe"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
-[sources.Beforerr]
-url = "https://github.com/Beforerr/Beforerr.jl"
-
-[sources.PlasmaFormulary]
-url = "https://github.com/Beforerr/PlasmaFormulary.jl"
+[sources]
+Beforerr = { url = "https://github.com/Beforerr/Beforerr.jl" }
+PlasmaFormulary = { url = "https://github.com/Beforerr/PlasmaFormulary.jl" }
 
 [compat]
 AlgebraOfGraphics = "0.9, 0.10"
 Arrow = "2"
 DataFrames = "1"
+DimensionalData = "0.29"
 FileIO = "1"
 LaTeXStrings = "1"
-Makie = "0.22"
+LazyArrays = "2.6.1"
+Makie = "0.21, 0.22"
+NaNStatistics = "≥0.6.50"
+OhMyThreads = "0.8"
+StaticArrays = "1.9.13"
+Statistics = "1"
 Unitful = "1"
 julia = "1.10"
