--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,10 +1,8 @@
 [deps]
 Beforerr = "49aed396-608e-4c3f-b6d6-a749216c9ea7"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+DimensionalData = "0703355e-b756-11e9-17c0-8b28908087d0"
 Discontinuity = "b54b658d-ecbf-47cc-8c7f-673f5d2a4b30"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 PlasmaFormulary = "d26ff896-aba2-4e70-a0a6-448627456efe"
-
-[sources]
-Beforerr = { url = "https://github.com/Beforerr/Beforerr.jl" }
-PlasmaFormulary = { url = "https://github.com/Beforerr/PlasmaFormulary.jl" }
-Discontinuity = { path = "../" }
+Speasy = "09b745ad-c67d-442f-94a6-c7f4d1e4d861"
