perf: move filter ahead

--- a/Project.toml
+++ b/Project.toml
@@ -38,7 +38,7 @@ FileIO = "1"
 LaTeXStrings = "1"
 LazyArrays = "2.6.1"
 Makie = "0.21, 0.22"
-NaNStatistics = "≥0.6.50"
+NaNStatistics = "0.6"
 OhMyThreads = "0.8"
 StaticArrays = "1.9.13"
 Statistics = "1"
