--- a/Project.toml
+++ b/Project.toml
@@ -21,13 +21,14 @@ Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 NaNStatistics = "b946abbf-3ea7-4610-9019-9858bfdeaf2d"
 OhMyThreads = "67456a42-1dca-4109-a031-0a68de7e3ad5"
 PlasmaFormulary = "d26ff896-aba2-4e70-a0a6-448627456efe"
+ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [sources]
-Beforerr = {url = "https://github.com/Beforerr/Beforerr.jl"}
-PlasmaFormulary = {url = "https://github.com/Beforerr/PlasmaFormulary.jl"}
+Beforerr = { url = "https://github.com/Beforerr/Beforerr.jl" }
+PlasmaFormulary = { url = "https://github.com/Beforerr/PlasmaFormulary.jl" }
 
 [compat]
 AlgebraOfGraphics = "0.9, 0.10"
@@ -40,6 +41,7 @@ LazyArrays = "2.6.1"
 Makie = "0.21, 0.22"
 NaNStatistics = "0.6"
 OhMyThreads = "0.8"
+ProgressMeter = "1.10"
 StaticArrays = "1.9.13"
 Statistics = "1"
 Unitful = "1"
