feat: ids_finder and distance matrix calculation

--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataFramesMeta = "1313f7d8-7da2-5740-9ea0-a2ca25f37964"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DimensionalData = "0703355e-b756-11e9-17c0-8b28908087d0"
+Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 FHist = "68837c9b-b678-4cd5-9925-8a54edc8f695"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
@@ -35,6 +36,7 @@ AlgebraOfGraphics = "0.9, 0.10"
 Arrow = "2"
 DataFrames = "1"
 DimensionalData = "0.29"
+Distances = "0.10"
 FileIO = "1"
 LaTeXStrings = "1"
 LazyArrays = "2.6.1"
