--- a/Project.toml
+++ b/Project.toml
@@ -13,23 +13,26 @@ Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DimensionalData = "0703355e-b756-11e9-17c0-8b28908087d0"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
 FHist = "68837c9b-b678-4cd5-9925-8a54edc8f695"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LazyArrays = "5078a376-72f3-5289-bfd5-ec5146d43c02"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 NaNStatistics = "b946abbf-3ea7-4610-9019-9858bfdeaf2d"
 OhMyThreads = "67456a42-1dca-4109-a031-0a68de7e3ad5"
 PlasmaFormulary = "d26ff896-aba2-4e70-a0a6-448627456efe"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
+SPEDAS = "3930f61c-4d81-4846-ab8f-357babe068a6"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [sources]
 Beforerr = { url = "https://github.com/Beforerr/Beforerr.jl" }
-PlasmaFormulary = { url = "https://github.com/Beforerr/PlasmaFormulary.jl" }
+# PlasmaFormulary = { url = "https://github.com/Beforerr/PlasmaFormulary.jl" }
 
 [compat]
 AlgebraOfGraphics = "0.9, 0.10"
@@ -37,13 +40,16 @@ Arrow = "2"
 DataFrames = "1"
 DimensionalData = "0.29"
 Distances = "0.10"
+Enzyme = "0.13"
 FileIO = "1"
 LaTeXStrings = "1"
 LazyArrays = "2.6.1"
+LsqFit = "0.15"
 Makie = "0.21, 0.22"
 NaNStatistics = "0.6"
 OhMyThreads = "0.8"
 ProgressMeter = "1.10"
+SPEDAS = "0.1.4"
 StaticArrays = "1.9.13"
 Statistics = "1"
 Unitful = "1"
