--- a/Project.toml
+++ b/Project.toml
@@ -13,7 +13,6 @@ Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DimensionalData = "0703355e-b756-11e9-17c0-8b28908087d0"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
-Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
 FHist = "68837c9b-b678-4cd5-9925-8a54edc8f695"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
@@ -29,9 +28,14 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
+[weakdeps]
+Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
+
+[extensions]
+DisEnzymeExt = "Enzyme"
+
 [sources]
 Beforerr = { url = "https://github.com/Beforerr/Beforerr.jl" }
-# PlasmaFormulary = { url = "https://github.com/Beforerr/PlasmaFormulary.jl" }
 
 [compat]
 AlgebraOfGraphics = "0.9, 0.10"
