--- a/Project.toml
+++ b/Project.toml
@@ -31,11 +31,11 @@ Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 [weakdeps]
 Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
 
+[sources.Beforerr]
+url = "https://github.com/Beforerr/Beforerr.jl"
+
 [extensions]
 DisEnzymeExt = "Enzyme"
-
-[sources]
-Beforerr = { url = "https://github.com/Beforerr/Beforerr.jl" }
 
 [compat]
 AlgebraOfGraphics = "0.9, 0.10"
@@ -47,7 +47,7 @@ Enzyme = "0.13"
 FileIO = "1"
 LaTeXStrings = "1"
 LsqFit = "0.15"
-Makie = "0.21, 0.22"
+Makie = "0.21, 0.22, 0.23"
 NaNStatistics = "0.6"
 OhMyThreads = "0.8"
 ProgressMeter = "1.10"
