--- a/Project.toml
+++ b/Project.toml
@@ -31,14 +31,14 @@ Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 [weakdeps]
 Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
 
+[sources.Beforerr]
+url = "https://github.com/Beforerr/Beforerr.jl"
+
 [extensions]
 DisEnzymeExt = "Enzyme"
 
-[sources]
-Beforerr = { url = "https://github.com/Beforerr/Beforerr.jl" }
-
 [compat]
-AlgebraOfGraphics = "0.9, 0.10"
+AlgebraOfGraphics = "0.9, 0.10, 0.11"
 Arrow = "2"
 DataFrames = "1"
 DimensionalData = "0.29"
