--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,6 @@ authors = ["Beforerr <zzj956959688@gmail.com> and contributors"]
 version = "0.1.0"
 
 [deps]
-AlgebraOfGraphics = "cbdf2221-f076-402e-a563-3d30da359d67"
 Arrow = "69666777-d1a9-59fb-9406-91d4454c9d45"
 Beforerr = "49aed396-608e-4c3f-b6d6-a749216c9ea7"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
@@ -18,7 +17,6 @@ FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
-Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 NaNStatistics = "b946abbf-3ea7-4610-9019-9858bfdeaf2d"
 OhMyThreads = "67456a42-1dca-4109-a031-0a68de7e3ad5"
 PlasmaFormulary = "d26ff896-aba2-4e70-a0a6-448627456efe"
@@ -29,10 +27,14 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [weakdeps]
+AlgebraOfGraphics = "cbdf2221-f076-402e-a563-3d30da359d67"
 Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
+Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 
 [extensions]
 DisEnzymeExt = "Enzyme"
+DisAlgebraOfGraphics = "AlgebraOfGraphics"
+DisMakie = "Makie"
 
 [sources]
 Beforerr = { url = "https://github.com/Beforerr/Beforerr.jl" }
@@ -47,7 +49,7 @@ Enzyme = "0.13"
 FileIO = "1"
 LaTeXStrings = "1"
 LsqFit = "0.15"
-Makie = "0.21, 0.22"
+Makie = "0.21, 0.22, 0.23, 0.24"
 NaNStatistics = "0.6"
 OhMyThreads = "0.8"
 ProgressMeter = "1.10"
