--- a/Project.toml
+++ b/Project.toml
@@ -31,16 +31,16 @@ AlgebraOfGraphics = "cbdf2221-f076-402e-a563-3d30da359d67"
 Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 
+[sources.Beforerr]
+url = "https://github.com/Beforerr/Beforerr.jl"
+
 [extensions]
-DisEnzymeExt = "Enzyme"
 DisAlgebraOfGraphics = "AlgebraOfGraphics"
+DisEnzymeExt = "Enzyme"
 DisMakie = "Makie"
 
-[sources]
-Beforerr = { url = "https://github.com/Beforerr/Beforerr.jl" }
-
 [compat]
-AlgebraOfGraphics = "0.9, 0.10"
+AlgebraOfGraphics = "0.9, 0.10, 0.11"
 Arrow = "2"
 DataFrames = "1"
 DimensionalData = "0.29"
