--- a/Project.toml
+++ b/Project.toml
@@ -31,13 +31,13 @@ AlgebraOfGraphics = "cbdf2221-f076-402e-a563-3d30da359d67"
 Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 
-[extensions]
-DisEnzymeExt = "Enzyme"
-DisAlgebraOfGraphics = "AlgebraOfGraphics"
-DisMakie = "Makie"
+[sources.Beforerr]
+url = "https://github.com/Beforerr/Beforerr.jl"
 
-[sources]
-Beforerr = { url = "https://github.com/Beforerr/Beforerr.jl" }
+[extensions]
+DisAlgebraOfGraphics = "AlgebraOfGraphics"
+DisEnzymeExt = "Enzyme"
+DisMakie = "Makie"
 
 [compat]
 AlgebraOfGraphics = "0.9, 0.10"
@@ -52,6 +52,7 @@ LsqFit = "0.15"
 Makie = "0.21, 0.22, 0.23, 0.24"
 NaNStatistics = "0.6"
 OhMyThreads = "0.8"
+PlasmaFormulary = "0.2"
 ProgressMeter = "1.10"
 SPEDAS = "0.1.4"
 StaticArrays = "1.9"
