--- a/Project.toml
+++ b/Project.toml
@@ -31,13 +31,13 @@ AlgebraOfGraphics = "cbdf2221-f076-402e-a563-3d30da359d67"
 Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 
-[extensions]
-DisEnzymeExt = "Enzyme"
-DisAlgebraOfGraphics = "AlgebraOfGraphics"
-DisMakie = "Makie"
+[sources.Beforerr]
+url = "https://github.com/Beforerr/Beforerr.jl"
 
-[sources]
-Beforerr = { url = "https://github.com/Beforerr/Beforerr.jl" }
+[extensions]
+DisAlgebraOfGraphics = "AlgebraOfGraphics"
+DisEnzymeExt = "Enzyme"
+DisMakie = "Makie"
 
 [compat]
 AlgebraOfGraphics = "0.9, 0.10"
@@ -46,6 +46,7 @@ DataFrames = "1"
 DimensionalData = "0.29"
 Distances = "0.10"
 Enzyme = "0.13"
+FHist = "0.11"
 FileIO = "1"
 LaTeXStrings = "1"
 LsqFit = "0.15"
