--- a/Project.toml
+++ b/Project.toml
@@ -57,7 +57,7 @@ NaNStatistics = "0.6"
 OhMyThreads = "0.8"
 PlasmaFormulary = "0.2"
 ProgressMeter = "1.10"
-SPEDAS = "0.1.4"
+SPEDAS = "0.1.4, 0.2"
 StaticArrays = "1.9"
 Statistics = "1"
 Unitful = "1"
